--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-uuid": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
-    "typescript": "^4.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
@@ -52,6 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.1.3"
   }
 }
